1、完成首页主数据初始化，缓存；

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#F84790</color>
     <color name="colorPrimaryDark">#F84790</color>
     <color name="colorAccent">#F6468F</color>
+
+    <color name="disable_mask">#4DFFFFFF</color>
+    <color name="bg_animation_item_cur">#4D000000</color>
 </resources>
