1、基本完成首页展示；

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,17 +4,18 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@android:color/white"
-    android:padding="16dp" >
+    android:padding="@dimen/margin_narrow" >
     
     <EditText
         android:id="@+id/search"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="@dimen/margin_narrow"
         android:background="@drawable/main_search_et_bg"
         android:gravity="center"
-        android:text="筛选番剧"
-        android:textColor="@android:color/secondary_text_light"/>
+        android:hint="筛选番剧"
+        android:textColorHint="@color/text_color_dark_gray"
+        android:textColor="@color/text_color_dark_gray"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
