--- a/app/src/main/res/drawable/main_search_et_bg.xml
+++ b/app/src/main/res/drawable/main_search_et_bg.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/secondary_text_dark"/>
+    <solid android:color="@color/text_color_gray"/>
     <corners android:radius="4dp"/>
 </shape>
