--- a/app/src/main/res/layout/item_bottom_mf.xml
+++ b/app/src/main/res/layout/item_bottom_mf.xml
@@ -7,5 +7,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0 部新番,共 0 话"
-        android:textColor="@color/text_color_dark_gray"/>
+        android:textColor="@color/text_color_dark_gray"
+        android:layout_gravity="center"/>
 </merge>
