--- a/app/src/main/res/layout/item_head_mf.xml
+++ b/app/src/main/res/layout/item_head_mf.xml
@@ -8,6 +8,7 @@
         android:layout_height="wrap_content"
         android:text="一六年 夏"
         android:textColor="@color/text_color_black"
-        android:textSize="@dimen/text_size_big"/>
+        android:textSize="@dimen/text_size_big"
+        android:layout_gravity="center"/>
 
 </merge>
