--- a/app/src/main/res/layout/item_animation_mf.xml
+++ b/app/src/main/res/layout/item_animation_mf.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginLeft="@dimen/margin_narrow"
+    android:layout_marginBottom="@dimen/margin_narrow">
 
     <ImageView
         android:id="@+id/cover"
@@ -41,10 +45,12 @@
             android:textColor="@android:color/white"
             android:layout_alignParentBottom="true"/>
 
-        <RadioButton
+        <CheckBox
             android:id="@+id/favrite"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentRight="true"
+            android:button="@null"
+            android:background="@drawable/radio_btn_selector"/>
     </RelativeLayout>
-</merge>
+</android.support.v7.widget.CardView>
