--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -5,5 +5,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:theme="@style/AppBar"
+    android:minHeight="?attr/actionBarSize"
+    app:contentInsetStart="0dp"
+    app:titleTextAppearance="@style/ToolbarTitleTextStyle"
     app:layout_scrollFlags="scroll|enterAlways"/>
