--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#F6468F</color>
 
     <color name="text_color_black">#212121</color>
-    <color name="text_color_gray">#E0E0E0</color>
+    <color name="text_color_gray">#9E9E9E</color>
     <color name="text_color_dark_gray">#616161</color>
 
     <color name="disable_mask">#CDFFFFFF</color>
