--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="margin_narrow">4dp</dimen>
     <dimen name="margin_normal">8dp</dimen>
     <dimen name="margin_double">16dp</dimen>
+    <dimen name="margin_triple">24dp</dimen>
 
     <dimen name="text_szie_small">12sp</dimen>
     <dimen name="text_szie_normal">14sp</dimen>
