--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,9 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="AppBar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
-        <item name="contentInsetStart">0dp</item>
-        <item name="android:background">@color/colorPrimary</item>
-        <item name="android:minHeight">?actionBarSize</item>
+    <style name="ToolbarTitleTextStyle" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:color">@color/text_color_dark_gray</item>
+        <item name="android:gravity">center_vertical</item>
     </style>
 </resources>
