--- a/app/src/main/res/drawable/play_btn_selector.xml
+++ b/app/src/main/res/drawable/play_btn_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/icon_pause" android:state_checked="true"/>
-    <item android:drawable="@drawable/icon_pause" android:state_selected="true"/>
-    <item android:drawable="@drawable/icon_play" />
+    <item android:drawable="@drawable/icon_play" android:state_checked="true"/>
+    <item android:drawable="@drawable/icon_play" android:state_selected="true"/>
+    <item android:drawable="@drawable/icon_pause" />
 </selector>
