--- a/app/src/main/res/layout/video.xml
+++ b/app/src/main/res/layout/video.xml
@@ -11,22 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
-            android:background="@color/bg_animation_item_cur"
-            app:title="">
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="播放"
-                android:singleLine="true"
-                android:maxEms="10"
-                android:ellipsize="marquee"
-                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
-        </android.support.v7.widget.Toolbar>
+            android:background="@color/bg_animation_item_cur" />
 
         <pro.luxun.luxunanimation.view.view.Viedo.VideoSide_
             android:id="@+id/light"
@@ -35,7 +24,8 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/margin_normal"
-            app:height_dp="120dp"/>
+            android:visibility="gone"
+            app:height_dp="120dp" />
 
         <pro.luxun.luxunanimation.view.view.Viedo.VideoSide_
             android:id="@+id/sound"
@@ -44,6 +34,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/margin_normal"
+            android:visibility="gone"
             app:height_dp="120dp"/>
 
         <com.pnikosis.materialishprogress.ProgressWheel
@@ -52,6 +43,7 @@
             android:layout_height="80dp"
             android:layout_centerInParent="true"
             app:barColor="@color/colorPrimary"
+            app:barWidth="3dp"
             app:progressIndeterminate="true"/>
         
         <RelativeLayout
