--- a/app/src/main/res/layout/activity_animation_detail.xml
+++ b/app/src/main/res/layout/activity_animation_detail.xml
@@ -63,6 +63,10 @@
                 <include layout="@layout/shadow"
                          android:layout_width="match_parent"
                          android:layout_height="1px"/>
+
+                <pro.luxun.luxunanimation.view.view.VideoComment_
+                    android:layout_width="match_parent"
+                    android:layout_height="156dp" />
             </LinearLayout>
 
             <RelativeLayout
