--- a/app/src/main/res/layout/item_topic.xml
+++ b/app/src/main/res/layout/item_topic.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-       xmlns:app="http://schemas.android.com/apk/res-auto">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+<merge xmlns:android="http://schemas.android.com/apk/res/android" >
 
         <TextView
             android:id="@+id/title"
@@ -16,20 +11,19 @@
             android:textStyle="bold"
             android:layout_margin="@dimen/margin_normal"/>
         
-        <pro.luxun.luxunanimation.view.view.Gallery_
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/gallery"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:view_pager_item_width="118dp"
-            app:view_pager_item_height="177dp"/>
+            android:layout_marginLeft="@dimen/margin_normal"
+            android:layout_marginRight="@dimen/margin_normal"/>
         
         <TextView
             android:id="@+id/details"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/margin_normal"
+            android:textSize="@dimen/text_szie_normal"
             android:textColor="@color/text_color"
-            android:lineSpacingMultiplier="1.2" />
-    </LinearLayout>
-
+            android:lineSpacingMultiplier="1.2"
+            android:layout_margin="@dimen/margin_normal"/>
 </merge>
