1、优化登录逻辑，基本完成用户中心； 2、基本完成番评；

--- a/app/src/main/res/layout/activity_animation_detail.xml
+++ b/app/src/main/res/layout/activity_animation_detail.xml
@@ -65,8 +65,9 @@
                          android:layout_height="1px"/>
 
                 <pro.luxun.luxunanimation.view.view.VideoComment_
+                    android:id="@+id/video_comment"
                     android:layout_width="match_parent"
-                    android:layout_height="156dp" />
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
             <RelativeLayout
