--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -1,17 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:id="@+id/root"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
+<android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <Button
-        android:id="@+id/login_btn"
-        android:layout_width="120dp"
-        android:layout_height="48dp"
-        android:layout_gravity="center"
-        android:text="点击登录"
-        android:textColor="@color/colorPrimary"
-        android:background="@drawable/login_btn_bg"/>
+    <RelativeLayout
+        android:id="@+id/root"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-</FrameLayout>
+        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
+            android:id="@+id/progress"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:indeterminate="true"
+            android:visibility="gone"
+            app:mpb_progressStyle="horizontal"
+            app:mpb_useIntrinsicPadding="false"
+            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal" />
+
+        <ImageView
+            android:id="@+id/header_img"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:scaleType="centerCrop"/>
+
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/avatar"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_below="@+id/header_img"
+            android:layout_marginTop="-35dp"
+            android:layout_centerHorizontal="true"
+            app:riv_border_width="2dp"
+            app:riv_border_color="@android:color/white"
+            app:riv_oval="true"/>
+
+        <FrameLayout
+            android:id="@+id/user_info"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/avatar" >
+
+            <TextView
+                android:id="@+id/user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/text_color"
+                android:textSize="@dimen/text_size_big"
+                android:layout_marginTop="@dimen/margin_normal"/>
+
+            <TextView
+                android:id="@+id/user_des"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|bottom"
+                android:textColor="@color/text_color_dark_gray"
+                android:textSize="@dimen/text_szie_normal"
+                android:maxEms="20"
+                android:ellipsize="end"
+                android:layout_marginBottom="@dimen/margin_normal"/>
+
+            <Button
+                android:id="@+id/login_btn"
+                android:layout_width="98dp"
+                android:layout_height="36dp"
+                android:layout_gravity="center"
+                android:text="点击登录"
+                android:textColor="@color/colorPrimary"
+                android:background="@drawable/login_btn_bg"/>
+        </FrameLayout>
+
+        <include
+            android:id="@+id/shadow"
+            android:layout_below="@+id/user_info"
+            layout="@layout/shadow"
+            android:layout_width="match_parent"
+            android:layout_height="2px" />
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab"
+            android:layout_below="@id/shadow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <android.support.v4.view.ViewPager
+            android:layout_below="@+id/tab"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+</android.support.v4.widget.NestedScrollView>
