--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,8 +4,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:minHeight="?attr/actionBarSize"
-    app:contentInsetStart="0dp"
+    android:layout_height="48dp"
     app:titleTextAppearance="@style/ToolbarTitleTextStyle"
     app:layout_scrollFlags="scroll|enterAlways"/>
