--- a/app/src/main/res/layout/view_video_comment.xml
+++ b/app/src/main/res/layout/view_video_comment.xml
@@ -57,19 +57,19 @@
         </RelativeLayout>
     </LinearLayout>
 
-    <com.pnikosis.materialishprogress.ProgressWheel
-        android:id="@+id/progress_list"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_below="@+id/comment_part"
-        android:layout_centerHorizontal="true"
-        app:barColor="@color/colorPrimary"
-        app:barWidth="3dp"
-        app:progressIndeterminate="true"/>
-
     <android.support.v7.widget.RecyclerView
         android:layout_below="@+id/comment_part"
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <com.pnikosis.materialishprogress.ProgressWheel
+        android:id="@+id/progress_list"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_below="@+id/recycler"
+        android:layout_centerHorizontal="true"
+        app:barColor="@color/colorPrimary"
+        app:barWidth="3dp"
+        app:progressIndeterminate="true"/>
 </merge>
