--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,8 +20,9 @@
             <android.support.design.widget.TabLayout
                 android:id="@+id/main_tab"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:visibility="gone"/>
+                android:layout_height="32dp"
+                android:visibility="gone"
+                app:tabIndicatorColor="@android:color/white"/>
         </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.view.ViewPager
