--- a/app/src/main/res/layout/item_topic.xml
+++ b/app/src/main/res/layout/item_topic.xml
@@ -1,29 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android" >
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="标题"
-            android:textColor="@color/text_color_dark_gray"
-            android:textSize="@dimen/text_size_big"
-            android:textStyle="bold"
-            android:layout_margin="@dimen/margin_normal"/>
-        
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/gallery"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_normal"
-            android:layout_marginRight="@dimen/margin_normal"/>
-        
-        <TextView
-            android:id="@+id/details"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/text_szie_normal"
-            android:textColor="@color/text_color"
-            android:lineSpacingMultiplier="1.2"
-            android:layout_margin="@dimen/margin_normal"/>
+            android:orientation="vertical">
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="标题"
+                    android:textColor="@color/text_color_dark_gray"
+                    android:textSize="@dimen/text_size_big"
+                    android:textStyle="bold"
+                    android:layout_margin="@dimen/margin_normal"/>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/gallery"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/margin_normal"
+                    android:layout_marginRight="@dimen/margin_normal"/>
+
+                <TextView
+                    android:id="@+id/details"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_szie_normal"
+                    android:textColor="@color/text_color"
+                    android:lineSpacingMultiplier="1.2"
+                    android:layout_margin="@dimen/margin_normal"/>
+        </LinearLayout>
 </merge>
