1、微调，明日再战；

--- a/app/src/main/res/drawable/icon_pause.xml
+++ b/app/src/main/res/drawable/icon_pause.xml
@@ -1,4 +1,4 @@
 <vector android:height="24dp" android:viewportHeight="128.0"
     android:viewportWidth="128.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FFFFFF" android:pathData="M47.17,101.72c0,5.72 -4.64,10.36 -10.36,10.36l0,0c-5.72,0 -10.36,-4.64 -10.36,-10.36l0,-75.21c0,-5.72 4.64,-10.36 10.36,-10.36l0,0c5.72,0 10.36,4.64 10.36,10.36L47.17,101.72zM101.21,101.72c0,5.72 -4.64,10.36 -10.36,10.36l0,0c-5.72,0 -10.36,-4.64 -10.36,-10.36l0,-75.21c0,-5.72 4.64,-10.36 10.36,-10.36l0,0c5.72,0 10.36,4.64 10.36,10.36L101.21,101.72z"/>
+    <path android:fillColor="#ffffff" android:pathData="M49.9,40.32c-0.85,0 -1.41,0.56 -1.41,1.41l0,45.11c0,0.85 0.56,1.41 1.41,1.41 0.85,0 1.41,-0.56 1.41,-1.41l0,-45.11C51.31,41.16 50.75,40.32 49.9,40.32zM78.1,40.32c-0.85,0 -1.41,0.56 -1.41,1.41l0,45.11c0,0.85 0.56,1.41 1.41,1.41 0.85,0 1.41,-0.56 1.41,-1.41l0,-45.11C79.51,41.16 78.94,40.32 78.1,40.32z"/>
 </vector>
