1、使用b站的弹幕库开发弹幕系统；

--- a/app/src/main/res/layout/video.xml
+++ b/app/src/main/res/layout/video.xml
@@ -26,8 +26,16 @@
             app:barColor="@color/colorPrimary"
             app:barWidth="3dp"
             app:progressIndeterminate="true"/>
-        
+
+        <pro.luxun.luxunanimation.view.view.Danmaku.DanmakuView
+            android:layout_below="@+id/toolbar"
+            android:layout_above="@+id/hud_bottom"
+            android:id="@+id/danmaku"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
         <RelativeLayout
+            android:id="@+id/hud_bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
